# ai-multi-agent-workflow

./: .gitignore  README.md  docker-compose.yml
mcp/: .gitignore  Dockerfile  INGESTION.md  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt
mcp/app/: __init__.py  cli.py  main.py
mcp/app/api/: __init__.py  graph.py  health.py  metrics.py  openapi_bridge.py  prompts.py  resources.py  servers.py  sessions.py  sse.py  tools.py
mcp/app/core/: __init__.py  config.py  logging.py  redis_client.py  security.py
mcp/app/ingestion/: __init__.py  internal_mcp_tools.py  istio_processor.py  logs_processor.py  neo4j_writer.py  prometheus_processor.py  runner.py
mcp/app/models/: __init__.py  schemas.py
mcp/app/repositories/: __init__.py  graph_repository.py
mcp/app/servers/: __init__.py  alertmanager_external_server.py  aws_external_server.py  base.py  context_server.py  elasticsearch_external_server.py  graph_external_server.py  infra_server.py  istio_external_server.py  kubernetes_external_server.py  newrelic_external_server.py  prometheus_external_server.py  rag_server.py  (+2 more)
mcp/specs/: .gitkeep
mcp/tests/: __init__.py  conftest.py  test_master.py
observability/: .gitignore  Dockerfile  QUICKSTART.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml  requirements.txt
observability/alertmanager/: alertmanager.yml
observability/app/: __init__.py  main.py
observability/otel-collector/: otel-collector-config.yaml
observability/prometheus/: prometheus.yml
observability/tests/: __init__.py  test_master.py
(+217 files in other folders)
